--- a/test-output/old/Default Suite/methods-alphabetical.html
+++ b/test-output/old/Default Suite/methods-alphabetical.html
@@ -1,20 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="60d6b1">  <td>18/07/31 16:59:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_ReportsAndLogs.afterMethod()[pri:0, instance:testNG.TestNG_ReportsAndLogs@61f8bee4]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1316864772</td>   <td></td> </tr>
-<tr bgcolor="60d6b1">  <td>18/07/31 16:59:32</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_ReportsAndLogs.afterMethod()[pri:0, instance:testNG.TestNG_ReportsAndLogs@61f8bee4]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1316864772</td>   <td></td> </tr>
-<tr bgcolor="60d6b1">  <td>18/07/31 16:59:32</td>   <td>-14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_ReportsAndLogs.beforeMethod()[pri:0, instance:testNG.TestNG_ReportsAndLogs@61f8bee4]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1316864772</td>   <td></td> </tr>
-<tr bgcolor="60d6b1">  <td>18/07/31 16:59:32</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_ReportsAndLogs.beforeMethod()[pri:0, instance:testNG.TestNG_ReportsAndLogs@61f8bee4]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1316864772</td>   <td></td> </tr>
-<tr bgcolor="60d6b1">  <td>18/07/31 16:59:32</td>   <td>6</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_ReportsAndLogs.cleanUp()[pri:0, instance:testNG.TestNG_ReportsAndLogs@61f8bee4]">&lt;&lt;cleanUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1316864772</td>   <td></td> </tr>
-<tr bgcolor="60d6b1">  <td>18/07/31 16:59:32</td>   <td>-44</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_ReportsAndLogs.setUp()[pri:0, instance:testNG.TestNG_ReportsAndLogs@61f8bee4]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1316864772</td>   <td></td> </tr>
-<tr bgcolor="60d6b1">  <td>18/07/31 16:59:32</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_ReportsAndLogs.testMethod1()[pri:0, instance:testNG.TestNG_ReportsAndLogs@61f8bee4]">testMethod1</td> 
-  <td>main@1316864772</td>   <td></td> </tr>
-<tr bgcolor="60d6b1">  <td>18/07/31 16:59:32</td>   <td>-14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_ReportsAndLogs.testMethod2()[pri:0, instance:testNG.TestNG_ReportsAndLogs@61f8bee4]">testMethod2</td> 
-  <td>main@1316864772</td>   <td></td> </tr>
+<tr bgcolor="60d6b1">  <td>18/08/02 11:57:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SeleniumLoginTest.afterClass()[pri:0, instance:extenreports.SeleniumLoginTest@3701eaf6]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@527446182</td>   <td></td> </tr>
+<tr bgcolor="60d6b1">  <td>18/08/02 11:56:46</td>   <td>-40264</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SeleniumLoginTest.beforeClass()[pri:0, instance:extenreports.SeleniumLoginTest@3701eaf6]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@527446182</td>   <td></td> </tr>
+<tr bgcolor="60d6b1">  <td>18/08/02 11:57:27</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SeleniumLoginTest.tearDown(org.testng.ITestResult)[pri:0, instance:extenreports.SeleniumLoginTest@3701eaf6]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@527446182</td>   <td></td> </tr>
+<tr bgcolor="60d6b1">  <td>18/08/02 11:57:03</td>   <td>-24143</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SeleniumLoginTest.test1_validLoginTest()[pri:0, instance:extenreports.SeleniumLoginTest@3701eaf6]">test1_validLoginTest</td> 
+  <td>main@527446182</td>   <td></td> </tr>
 </table>
