--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,15 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default Suite</th></tr>
-<tr><td><a href="#t0">SE_Info</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">44,791</td><td></td><td></td></tr>
+<tr><td><a href="#t0">SE_Info</a></td><td class="num">1</td><td class="num attn">1</td><td class="num attn">1</td><td class="num">81</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">SE_Info &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">extenreports.SeleniumLoginTest</td><td><a href="#m0">test1_validLoginTest</a></td><td rowspan="1">1533229023079</td><td rowspan="1">24136</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">SE_Info &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testNG.TestNG_ReportsAndLogs</td><td><a href="#m0">testMethod2</a></td><td rowspan="1">1534260348068</td><td rowspan="1">2</td></tr><tr><th colspan="4">SE_Info &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">testNG.TestNG_ReportsAndLogs</td><td><a href="#m1">testMethod3</a></td><td rowspan="1">1534260348090</td><td rowspan="1">0</td></tr><tr><th colspan="4">SE_Info &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testNG.TestNG_ReportsAndLogs</td><td><a href="#m2">testMethod1</a></td><td rowspan="1">1534260348084</td><td rowspan="1">0</td></tr></tbody>
 </table>
-<h2>SE_Info</h2><h3 id="m0">extenreports.SeleniumLoginTest#test1_validLoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>SE_Info</h2><h3 id="m0">testNG.TestNG_ReportsAndLogs#testMethod2</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">TestNG_ReportsAndLogs -> testMethod2</div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
+	at testNG.TestNG_ReportsAndLogs.testMethod2(TestNG_ReportsAndLogs.java:41)
+... Removed 28 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testNG.TestNG_ReportsAndLogs#testMethod3</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Throwable: Method TestNG_ReportsAndLogs.testMethod3()[pri:0, instance:testNG.TestNG_ReportsAndLogs@551aa95a] depends on not successfully finished methods
+... Removed 17 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">testNG.TestNG_ReportsAndLogs#testMethod1</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">TestNG_ReportsAndLogs -> testMethod1</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
